Compatible with - finish KPs updates

--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -68,6 +68,10 @@ master-slider: yes
         <li>Multiple jetting options optimize the tool for a variety of pumps pressures and flows - unplug, polish, or run longer lines based on jetting</li>
         <li>Designed to easily pair with the <a href="/abx-500">AutoBox ABX-500</a> hose tractor for hands-free pipe cleaning</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-500" data-toggle="tooltip" title="AutoBox ABX-500">500</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
