--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -68,6 +68,10 @@ master-slider: yes
         <li>Four-port heads can easily be configured for two-port applications</li>
         <li>Fully redesigned BC 705 cartridge seal for 44k psi models effectively doubles the life of the seal and is a drop-in replacement to the BC 505-S</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/striker" data-toggle="tooltip" title="Striker">SKR</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
