--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -75,6 +75,10 @@ master-slider: yes
         <li>Stainless steel construction for extreme durability and longevity</li>
         <li>Efficiently remove removing scale, carbons and polymers</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-500" data-toggle="tooltip" title="AutoBox ABX-500">500</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">700</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
