--- a/rotary-waterblast-tools/bpt-100-safety-stop.html
+++ b/rotary-waterblast-tools/bpt-100-safety-stop.html
@@ -63,6 +63,10 @@ master-slider: yes
         <li>Accomodates a range of hose sizes</li>
         <li>Small tool centering device for optimal cleaning</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
+      </div>
 
       <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
