--- a/rotary-waterblast-tools/spitfire-shotgunning.html
+++ b/rotary-waterblast-tools/spitfire-shotgunning.html
@@ -63,6 +63,10 @@ master-slider: yes
         <li>Short overall tool length and light weight allow easy handling and less operator fatigue</li>
         <li>External shield option protects the tool from damage caused by lateral impacts</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/striker" data-toggle="tooltip" title="Striker">SKR</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
