--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -75,6 +75,10 @@ master-slider: yes
         <li>Several mounting options available</li>
         <li>CE Certified</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/2inch-badger" data-toggle="tooltip" title="2-inch Badger">BA2</a> <a class="btn" href="/4inch-badger" data-toggle="tooltip" title="4-inch Badger">BA4</a> <a class="btn" href="/bjv" data-toggle="tooltip" title="BJV">BJV</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a> <a class="btn" href="/gopher" data-toggle="tooltip" title="Gopher">GO</a> <a class="btn" href="/raptor" data-toggle="tooltip" title="Raptor">RPT</a> <a class="btn" href="/tr-130" data-toggle="tooltip" title="Torus TR-130">TR</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
