--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -63,6 +63,10 @@ master-slider: yes
         <li>Modular rail allows the assembly to be customized to any length</li>
         <li>Fully automated operation delivers consistent and repeatable results when cleaning thousands of linear feet of pipe lengths</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/self-rotary-cleaning-heads" data-toggle="tooltip" title="Self-Rotary Heads">SR</a> <a class="btn" href="/powered-cleaning-heads" data-toggle="tooltip" title="Powered Rotational Heads">PR</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
