--- a/waterblast-automation/torus-positioning-booms.html
+++ b/waterblast-automation/torus-positioning-booms.html
@@ -63,6 +63,10 @@ master-slider: yes
         <li>Portable and easy to set up; no special tools required to position head</li>
         <li>Optional Control Box offers convenient controls for vertical positioning and linear speed</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/tr-130" data-toggle="tooltip" title="Torus TR-130">TR130</a> <a class="btn" href="/tr-200" data-toggle="tooltip" title="Torus TR-200">TR200</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
