--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -78,6 +78,10 @@ master-slider: yes
         <li>Multiple mounting options</li>
         <li>Adapters for pipes with no-flange entry</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/2inch-badger" data-toggle="tooltip" title="2-inch Badger">BA2</a> <a class="btn" href="/4inch-badger" data-toggle="tooltip" title="4-inch Badger">BA4</a> <a class="btn" href="/bjv" data-toggle="tooltip" title="BJV">BJV</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a> <a class="btn" href="/gopher" data-toggle="tooltip" title="Gopher">GO</a> <a class="btn" href="/raptor" data-toggle="tooltip" title="Raptor">RPT</a>
+      </div>
 
       <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
