--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -81,6 +81,10 @@ master-slider: yes
         <li>Effectively removes thin, hard scale, carbons, coke, and polymers</li>
         <li>Banshee Beetle models are designed to work around tight radiused bends</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
