--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -67,6 +67,10 @@ master-slider: yes
         <li>Multiple head options available</li>
         <li>Optional centering devices available</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-500" data-toggle="tooltip" title="AutoBox ABX-500">500</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
