--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -77,7 +77,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">PRO-700</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">700</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
