--- a/waterblast-automation/autopack-lwp.html
+++ b/waterblast-automation/autopack-lwp.html
@@ -67,7 +67,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">ABX-PRO</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
       </div>
       
       <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
