--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -70,7 +70,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
