--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -68,6 +68,10 @@ master-slider: yes
         <li>Rollers are available to rotate the tube bundle for complete coverage</li>
         <li>Easy and cost-effective to maintain</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/self-rotary-cleaning-heads" data-toggle="tooltip" title="Self-Rotary Heads">SR</a> <a class="btn" href="/powered-cleaning-heads" data-toggle="tooltip" title="Powered Rotational Heads">PR</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
