--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -45,6 +45,10 @@ master-slider: yes
             <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-04.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-07.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-07.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-06.jpg" alt="Badger high pressure cleaning for small pipes with bends">
             <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-06.jpg" alt="thumb">
           </div>
