--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -6,7 +6,7 @@ permalink: /sewer-tools
 landing: yes
 ---
   
-<section class="landing">
+<section class="landing warthog">
   <div class="row header">
 <!--
     <div class="col-sm-12 heading-img">
