--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -66,18 +66,18 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Remote operation from outside of the blast zone reduces risk of injuri</li>
+        <li>Remote operation from outside of the blast zone reduces risk of injuries</li>
         <li>Hands-free cleaning minimizes operator fatigue and reduces downtime</li>
         <li>Remotely adjustable hose clamp pressure allows operator to adapt to changing conditions and minimize hose wear</li>
         <li>Forward and reverse feed rates can be independently adjusted for repeatable, consistent cleaning</li>
-        <li>Capable of exerting up to 200 ft-lb of push/pull force on the hose when outfitted with</li>
+        <li>Capable of exerting up to 200 ft-lb of push/pull force on the hose when outfitted with snout accessory</li>
         <li>Passes hoses and couplings up to 1.75 in. (44.5 mm) OD</li>
         <li>Several mounting options available</li>
         <li>CE Certified</li>
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/2inch-badger" data-toggle="tooltip" title="2-inch Badger">BA2</a> <a class="btn" href="/4inch-badger" data-toggle="tooltip" title="4-inch Badger">BA4</a> <a class="btn" href="/bjv" data-toggle="tooltip" title="BJV">BJV</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a> <a class="btn" href="/gopher" data-toggle="tooltip" title="Gopher">GO</a> <a class="btn" href="/raptor" data-toggle="tooltip" title="Raptor">RPT</a> <a class="btn" href="/tr-130" data-toggle="tooltip" title="Torus TR-130">TR</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/2inch-badger" data-toggle="tooltip" title="2-inch Badger">BA2</a> <a class="btn" href="/4inch-badger" data-toggle="tooltip" title="4-inch Badger">BA4</a> <a class="btn" href="/6inch-badger" data-toggle="tooltip" title="6-inch Badger">BA6</a> <a class="btn" href="/bjv" data-toggle="tooltip" title="BJV">BJV</a> <a class="btn" href="/raptor" data-toggle="tooltip" title="Raptor">RPT</a> <a class="btn" href="/tr-130" data-toggle="tooltip" title="Torus TR-130">TR</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
