update product CTAs

--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -64,7 +64,7 @@ master-slider: yes
         <li>Field serviceable</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Quote</a>
 
   </div>
 
