--- a/downhole-tools/spincat-sc-168.html
+++ b/downhole-tools/spincat-sc-168.html
@@ -40,7 +40,7 @@ master-slider: yes
       
       <p class="product-description">The Spincat SC-168 can be used at operating pressures of 1000 to 5000 psi and flow rates of .7 to 1.33 bpm (30 to 56 gpm). It has a 1″ AMMT inlet thread.</p>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
