--- a/waterblast-automation/powered-rotation-units.html
+++ b/waterblast-automation/powered-rotation-units.html
@@ -57,7 +57,7 @@ master-slider: yes
         <li>Adaptable head configurations can be customized for a large range of applications
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
