--- a/waterblast-automation/prodrain.html
+++ b/waterblast-automation/prodrain.html
@@ -61,7 +61,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/beetle" data-toggle="tooltip" title="Beetle">BT</a> <a class="btn" href="/2inch-badger" data-toggle="tooltip" title="2-inch Badger">BA2</a>
       </div>
 
-      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
