--- a/waterblast-automation/torus-positioning-booms.html
+++ b/waterblast-automation/torus-positioning-booms.html
@@ -68,7 +68,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/tr-130" data-toggle="tooltip" title="Torus TR-130">TR130</a> <a class="btn" href="/tr-200" data-toggle="tooltip" title="Torus TR-200">TR200</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
