--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -72,7 +72,7 @@ master-slider: yes
         <li>Wide range of accessories available including positioning devices, cage centralizers and extensions help adapt the Torus TR-130 to specific needs and jobs</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
