--- a/downhole-tools/spincat-sc-287.html
+++ b/downhole-tools/spincat-sc-287.html
@@ -40,7 +40,7 @@ master-slider: yes
       
       <p class="product-description">The Spincat SC-287 can be used at operating pressures of 1000 to 5000 psi and flow rates of 1 to 3 bpm (40 to 120 gpm). It has a 2-3/8 PAC inlet thread.</p>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
