--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -70,7 +70,7 @@ master-slider: yes
         <li>Centralizer options for larger pipe sizes available</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
