--- a/rotary-waterblast-tools/bjv-centralizers.html
+++ b/rotary-waterblast-tools/bjv-centralizers.html
@@ -74,7 +74,7 @@ master-slider: yes
         <li>Optimize jet cleaning for small to very large pipes</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
