--- a/rotary-waterblast-tools/bpt-100-safety-stop.html
+++ b/rotary-waterblast-tools/bpt-100-safety-stop.html
@@ -68,7 +68,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
       </div>
 
-      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
