--- a/rotary-waterblast-tools/hose-storage-reel.html
+++ b/rotary-waterblast-tools/hose-storage-reel.html
@@ -56,7 +56,7 @@ master-slider: yes
         <li>Shipped fully assembled</li>
       </ul>
 
-      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
