--- a/rotary-waterblast-tools/nozzles-extensions.html
+++ b/rotary-waterblast-tools/nozzles-extensions.html
@@ -247,7 +247,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Quote</a>
     </div>
   </div>
   <!-- End Product Info -->
