--- a/rotary-waterblast-tools/nozzles.html
+++ b/rotary-waterblast-tools/nozzles.html
@@ -74,7 +74,7 @@ master-slider: yes
         <li>Available in a variety of materials and sizes to suit your application</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
