--- a/rotary-waterblast-tools/pipe-extensions.html
+++ b/rotary-waterblast-tools/pipe-extensions.html
@@ -80,7 +80,7 @@ master-slider: yes
         <li>Custom lengths available</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
