--- a/rotary-waterblast-tools/sm-swivel.html
+++ b/rotary-waterblast-tools/sm-swivel.html
@@ -59,7 +59,7 @@ master-slider: yes
         <li>0° or 90° inlet connection simplifies hose routing</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
