--- a/rotary-waterblast-tools/ve-400-safety-stop.html
+++ b/rotary-waterblast-tools/ve-400-safety-stop.html
@@ -57,7 +57,7 @@ master-slider: yes
         <li>Accomodates different sizes of tube sheets</li>
       </ul>
 
-      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
