--- a/sewer-tools-nozzles/hydro-x-fixed.html
+++ b/sewer-tools-nozzles/hydro-x-fixed.html
@@ -66,7 +66,7 @@ master-slider: yes
         <li>High-visibility urethane guard</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
