--- a/sewer-tools-nozzles/manhole-cleaner.html
+++ b/sewer-tools-nozzles/manhole-cleaner.html
@@ -56,7 +56,7 @@ master-slider: yes
         <li>Extensions and configuration options available</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
