--- a/sewer-tools-nozzles/warthog-descaling-heads.html
+++ b/sewer-tools-nozzles/warthog-descaling-heads.html
@@ -69,7 +69,7 @@ master-slider: yes
         <li>Available for multiple inlets</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
