--- a/sewer-tools-nozzles/warthog-wgp.html
+++ b/sewer-tools-nozzles/warthog-wgp.html
@@ -63,7 +63,7 @@ master-slider: yes
         <li>Optional <a href="/warthog-descalers">descaling head available</a></li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
