--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -77,7 +77,7 @@ master-slider: yes
         <li>Choose your rotation speed with 3 viscous fluid options</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
