--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -71,7 +71,7 @@ master-slider: yes
         <li>Switch to cleaning jets maximize power for clearing debris and cutting roots</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
