--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -70,7 +70,7 @@ master-slider: yes
         <li>Independently replaceable fins can be easily replaced as wear occurs without opening tool body</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
