--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -77,7 +77,7 @@ master-slider: yes
         <li>Switch to cleaning jets maximize power for cutting roots annd clearing debris</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
