--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -81,7 +81,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
