--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -80,7 +80,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/2inch-badger" data-toggle="tooltip" title="2-inch Badger">BA2</a> <a class="btn" href="/4inch-badger" data-toggle="tooltip" title="4-inch Badger">BA4</a> <a class="btn" href="/6inch-badger" data-toggle="tooltip" title="6-inch Badger">BA6</a> <a class="btn" href="/bjv" data-toggle="tooltip" title="BJV">BJV</a> <a class="btn" href="/raptor" data-toggle="tooltip" title="Raptor">RPT</a> <a class="btn" href="/tr-130" data-toggle="tooltip" title="Torus TR-130">TR</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
