--- a/waterblast-automation/autopack-2l.html
+++ b/waterblast-automation/autopack-2l.html
@@ -71,7 +71,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a>
       </div>
       
-      <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Quote</a>
 
   </div>
 
