--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -72,7 +72,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">700</a>
       </div>
       
-      <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Quote</a>
 
   </div>
 
