--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -73,7 +73,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/self-rotary-cleaning-heads" data-toggle="tooltip" title="Self-Rotary Heads">SR</a> <a class="btn" href="/powered-cleaning-heads" data-toggle="tooltip" title="Powered Rotational Heads">PR</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
