--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -73,7 +73,7 @@ master-slider: yes
         <li>Air or hydraulic powered</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
