--- a/waterblast-automation/self-rotary-heads.html
+++ b/waterblast-automation/self-rotary-heads.html
@@ -59,7 +59,7 @@ master-slider: yes
         <li>Optional 18 or 24 in. ( 45.7 or 61.0 cm) jet paths</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
