--- a/index.html
+++ b/index.html
@@ -13,7 +13,96 @@ landing: yes
   
   <!-- new slide -->
   <div class="ms-slide">
-    <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/> 
+    <img src="/assets/img/features/bg_red_rain.jpg" data-src="/assets/img/features/bg_red_rain.jpg" alt="lorem ipsum dolor sit"/> 
+
+    <div class="ms-layer feature-h1" style="width:400px;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="800" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-43" 
+      data-origin="ml" 
+      data-position="normal"   
+      data-masked="true">Fully Loaded
+    </div>
+    
+    <div class="ms-layer feature-h2" style="" 
+      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1000" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-83" 
+      data-origin="ml" 
+      data-position="normal">Fall Shutdown Special
+    </div>
+
+    <div class="ms-layer feature-h2" style="width:300px;"   
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="1600" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="16" 
+      data-origin="ml" 
+      data-position="normal">FREE hoses and nozzles with select automated equipment
+    </div>
+
+    <a href="http://info.stoneagetools.com/fully-loaded-fall-shutdown-special" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="1600" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">More Info
+    </a>
+
+    <img class="ms-layer" src="/assets/img/features/ABX-PRO_beauty_01.png" 
+       data-src="/assets/img/features/ABX-PRO_beauty_01.png" alt="ABX-PRO" style=""  
+       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+       data-ease="easeOutQuint"       
+       data-parallax="90" 
+       data-type="image"          
+       data-offset-x="0" 
+       data-offset-y="0" 
+       data-origin="mr" 
+       data-position="normal"
+     />
+    
+    <img class="ms-layer" src="/assets/img/features/btl-bn-nozzles.png" data-src="/assets/img/features/btl-bn-nozzles.png" alt="" style=""  
+        data-effect="t(true,n,60,n,n,n,n,n,n,n,n,n,n,n,n)"   
+        data-duration="2400" 
+        data-delay="1200" 
+        data-ease="easeOutQuint"  
+        data-type="image"          
+        data-offset-x="336" 
+        data-offset-y="130" 
+        data-origin="mr" 
+        data-position="normal" 
+     />
+
+     <img class="ms-layer" src="/assets/img/features/hoses.png" data-src="/assets/img/features/hoses.png" alt="" style=""  
+        data-effect="t(true,n,80,n,n,n,n,n,n,n,n,n,n,n,n)"  
+        data-duration="2400" 
+        data-delay="1600"  
+        data-ease="easeOutQuint"   
+        data-type="image"          
+        data-offset-x="640" 
+        data-offset-y="80" 
+        data-origin="mr" 
+        data-position="normal" 
+      />
+
+  </div>
+  <!-- end of slide -->
+  
+  <!-- new slide -->
+  <div class="ms-slide">
+    <img src="/assets/img/features/bg_green.jpg" data-src="/assets/img/features/bg_green.jpg" alt="lorem ipsum dolor sit"/> 
 
     <div class="ms-layer feature-h1" style="width:400px;"
       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
@@ -332,6 +421,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/joins-certified-eo">StoneAge Certified Employee-Owned</a></h4>
+        <p>StoneAge is very pleased to announce that it has become a founding member of Certified EO, a new certification program for employee-owned companies.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/stoneage-announces-new-intl-sales-director">StoneAge Announces New International Sales Director</a></h4>
         <p>StoneAge names Randolph Briggs International Sales Director for the Middle East, Southeast Asia, India, and South Pacific.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
@@ -350,11 +444,6 @@ landing: yes
         <h4><a href="http://news.stoneagetools.com/fully-loaded-for-fall-shutdowns">Fully Loaded Fall Shutdown Special</a></h4>
         <p>Select Automated Equipment purchases come "Fully Loaded" with nozzles and hoses for the job.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/autopack-3l-and-autopack-2l-available">AutoPacks for ABX-3L and ABX-2L Now Available</a></h4>
-        <p>StoneAge is pleased to announce that AutoPacks are now available for ABX-3L and ABX-2L triple and dual lance tube cleaning systems.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
@@ -428,6 +517,9 @@ landing: yes
       </div>
       <div class="item">
         <a href="http://www.dahrm.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-dahrm.png" alt="DAHRM"></a>
+      </div>
+      <div class="item">
+        <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>
       </div>
     </div>
   </div>
