warthogs for houston

--- a/index.html
+++ b/index.html
@@ -21,21 +21,10 @@ landing: yes
       data-delay="800" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="-43" 
-      data-origin="ml" 
-      data-position="normal"   
-      data-masked="true">Fully Loaded
-    </div>
-    
-    <div class="ms-layer feature-h2" style="" 
-      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="1000" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
       data-offset-y="-83" 
       data-origin="ml" 
-      data-position="normal">Fall Shutdown Special
+      data-position="normal"   
+      data-masked="true">Sewer Tools for Houston
     </div>
 
     <div class="ms-layer feature-h2" style="width:300px;"   
@@ -46,10 +35,10 @@ landing: yes
       data-offset-x="150" 
       data-offset-y="16" 
       data-origin="ml" 
-      data-position="normal">FREE hoses and nozzles with select automated equipment
+      data-position="normal">StoneAge is donating a fleet of Warthog sewer nozzles to the hurricane relief effort
     </div>
 
-    <a href="http://info.stoneagetools.com/fully-loaded-fall-shutdown-special" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="http://news.stoneagetools.com/free-sewer-tools-for-houston" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -61,8 +50,8 @@ landing: yes
        data-position="normal">More Info
     </a>
 
-    <img class="ms-layer" src="/assets/img/features/ABX-PRO_beauty_01.png" 
-       data-src="/assets/img/features/ABX-PRO_beauty_01.png" alt="ABX-PRO" style=""  
+    <img class="ms-layer" src="/assets/img/features/warthogs-for-houston.png" 
+       data-src="/assets/img/features/warthogs-for-houston.png" alt="Warthog sewer nozzles" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
        data-ease="easeOutQuint"       
        data-parallax="90" 
@@ -73,6 +62,7 @@ landing: yes
        data-position="normal"
      />
     
+<!--
     <img class="ms-layer" src="/assets/img/features/btl-bn-nozzles.png" data-src="/assets/img/features/btl-bn-nozzles.png" alt="" style=""  
         data-effect="t(true,n,60,n,n,n,n,n,n,n,n,n,n,n,n)"   
         data-duration="2400" 
@@ -96,6 +86,7 @@ landing: yes
         data-origin="mr" 
         data-position="normal" 
       />
+-->
 
   </div>
   <!-- end of slide -->
