htaccess fix and misc updates

--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -18,6 +18,7 @@ master-slider: yes
     <p>The company was launched when co-founders John Wolgamott and Jerry Zink developed a new self-rotary nozzle from their garage, changing the way heat exchangers were cleaned in the early 1980s. Their passion for research and development bred a culture of product innovation at StoneAge where the commitment to designing new tools and equipment has improved the way the waterblasting industry works for over 35 years.</p>
     <p>This passion for product leadership has brought StoneAge engineering to the forefront of the movement toward hands-free waterblast equipment. New state of the art in-house testing facilities allow the dedicated engineering team to continue to push the boundaries of design. By partnering with industrial cleaning contractors, StoneAge engineers are able to gain unique insight that guides the design of automated systems that increase safety and advance productivity for a wide variety of waterblasting applications. Paired with their unmatched customer service, StoneAge is proud to be leading the way to a safer, more efficient industry.</p>
     <p>The company has over 150 dealers in 47 countries offering products for industrial, sewer, and coiled tube cleaning as well as custom engineered equipment for application-specific challenges.</p>
+    <p>Quality StoneAge products for industrial, sewer, and coiled tube cleaning, as well as custom engineered equipment for application-specific challenges are distrubuted worldwide directly and across a network of over 90 dealers in 35 countries.</p>
   </div>
 
   <aside class="col-sm-3 col-sm-offset-2 padding-tb-30 cta">
@@ -29,6 +30,7 @@ master-slider: yes
       <a href="/rentals">See StoneAge Tool Rentals</a></p>
       <p class="point"><span>Want to work with us?</span><br/>
       <a href="/jobs">Check Our Career Postings</a></p>
+      <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>
     </div>
   </aside>
 </section>
@@ -41,6 +43,9 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>
+      </div>
       <div class="item">
         <a href="http://www.hasc.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-hasc.png" alt="Houston Area Safety Council"></a>
       </div>
