--- a/index.html
+++ b/index.html
@@ -412,6 +412,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/free-sewer-tools-for-houston">Warthogs for Houston</a></h4>
+        <p>StoneAge is donating over $100K in Warthog sewer tools to aid Houston and surrounding communities with cleanup efforts after hurricane Harvey.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/joins-certified-eo">StoneAge Certified Employee-Owned</a></h4>
         <p>StoneAge is very pleased to announce that it has become a founding member of Certified EO, a new certification program for employee-owned companies.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2017</small></p>
@@ -425,11 +430,6 @@ landing: yes
         <h4><a href="http://news.stoneagetools.com/prodrain-for-abx-pro">ProDrain Turns the ABX-PRO into a Powerful Drain Cleaner</a></h4>
         <p>The ProDrain PRO-700 accessory optimizes the versatile AutoBox ABX-PRO single lance tractor to safely and quickly clean floor drains.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/partners-with-jjei-canada">StoneAge Partners with JJEI Canada</a></h4>
-        <p>StoneAge Grants Canadian Dealership Appointment to Joe Johnson Equipment in Edmonton, Alberta and Barrie, Ontario.<br>
-        <small><i class="fa fa-newspaper-o"></i> PRWeb, August 2017</small></p>
       </li>
       <li>
         <h4><a href="http://news.stoneagetools.com/fully-loaded-for-fall-shutdowns">Fully Loaded Fall Shutdown Special</a></h4>
@@ -474,6 +474,9 @@ landing: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>
+      </div>
+      <div class="item">
         <a href="http://www.hasc.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-hasc.png" alt="Houston Area Safety Council"></a>
       </div>
       <div class="item">
@@ -508,9 +511,6 @@ landing: yes
       </div>
       <div class="item">
         <a href="http://www.dahrm.org/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-dahrm.png" alt="DAHRM"></a>
-      </div>
-      <div class="item">
-        <a href="https://www.certifiedeo.com/" target="_blank"><img class="img-responsive" src="/assets/img/logo-af-certifiedeo.png" alt="Certified EO"></a>
       </div>
     </div>
   </div>
