--- a/loc-europe.html
+++ b/loc-europe.html
@@ -56,13 +56,13 @@ contact-europe: yes
               Managing Director<br/>
               Office: +44 (0) 1684 892065<br/>
               Mobile: +44 (0)7468 574 483<br />
-            <a href="mailto:steve.ellis@stoneagetools.com">steve.ellis@&#8203;stoneagetools.com</a></p>
+            <a href="mailto:steve.ellis@stoneagetools.com">steve.ellis@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Karen Birt</strong><br/>
               Operations Manager<br/>
               Main: +44 (0) 1684 892065<br/>
-              <a href="mailto:karen.birt@stoneagetools.com">karen.birt@&#8203;stoneagetools.com</a></p>
+              <a href="mailto:karen.birt@stoneagetools.com">karen.birt@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
@@ -71,22 +71,29 @@ contact-europe: yes
               European Dealer/UK Sales Manager<br/>
               Office: +44 (0) 1684 892065<br/>
               Mobile: +44 (0)7788 926261<br />
-            <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@&#8203;stoneagetools.com</a></p>
+            <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Jan van der Wal</strong><br/>
               Sales Manager – Benelux and Germany<br/>
               Office: +44 (0) 1684 892065<br/>
               Mobile: +31 6 50 63 50 90<br />
-            <a href="mailto:jan.vanderwal@stoneagetools.com">jan.vanderwal@&#8203;stoneagetools.com</a></p>
+            <a href="mailto:jan.vanderwal@stoneagetools.com">jan.vanderwal@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Bob Birt</strong>
-            <br/>Technical Consultant<br/>
+            <p><strong>Gordon Taylor</strong>
+            <br/>Technical Product Expert<br/>
+              Office: +44 (0) 1684 892065<br/>
+              Mobile: +44 (0) 7771 684961<br />
+              <a href="mailto:gordon.taylor@stoneagetools.com">gordon.taylor@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Jean-Baptiste Ternoy</strong>
+            <br/>Sales Manager France<br/>
               Main: +44 (0) 1684 892065<br/>
-              <a href="mailto:bob.birt@stoneagetools.com">bob.birt@&#8203;stoneagetools.com</a></p>
+              <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a></p>
           </div>
         </div>
 
@@ -94,25 +101,35 @@ contact-europe: yes
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Andrew Stevenson</strong><br/>
-              Customer Service<br/>
               Main: +44 (0) 1684 892065<br/>
-            <a href="mailto:andrew.stevenson@stoneagetools.com">andrew.stevenson@&#8203;stoneagetools.com</a></p>
+            <a href="mailto:andrew.stevenson@stoneagetools.com">andrew.stevenson@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>James Stallard</strong><br/>
-              Customer Service<br/>
               Main: +44 (0) 1684 892065<br/>
-            <a href="mailto:james.stallard@stoneagetools.com">james.stallard@&#8203;stoneagetools.com</a></p>
+            <a href="mailto:james.stallard@stoneagetools.com">james.stallard@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Karen Evans</strong><br/>
-              Customer Service<br/>
               Main: +44 (0) 1684 892065<br/>
-            <a href="mailto:karen.evans@stoneagetools.com">karen.evans@&#8203;stoneagetools.com</a></p>
+            <a href="mailto:karen.evans@stoneagetools.com">karen.evans@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Caroline Reynolds</strong><br/>
+              Main: +44 (0) 1684 892065<br/>
+            <a href="mailto:caroline.reynolds@stoneagetools.com">caroline.reynolds@stoneagetools.com</a></p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Johanna Spaeth</strong><br/>
+              Main: +44 (0) 1684 892065<br/>
+            <a href="mailto:Johanna.Spaeth@stoneagetools.com">johanna.spaeth@stoneagetools.com</a></p>
+          </div>
+        </div>
+
 
       </div>
     </section>
