--- a/rotary-waterblast-tools/ve-400-safety-stop.html
+++ b/rotary-waterblast-tools/ve-400-safety-stop.html
@@ -48,7 +48,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The VE-400 is designed to protect the operator from a flex lance exiting the tube sheet during cleaning operations. The VE-400 adapts to both horizontal and vertical applications, and the wide range of adjustment easily accommodates different sizes of tube sheets.</p>
+      <p class="product-description">With safety as the primary consideration, the VE-400 Flex Lance Safety Device was designed to protect the operator from a flex lance exiting a tube sheet during cleaning operations. It can easily be used for both vertical and horizontal applications and its wide range of adjustment will accommodate different sizes of tube sheets. Durable construction is of galvanized steel and anodized aluminum with a Lexan splash guard.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
