--- a/careers.html
+++ b/careers.html
@@ -21,12 +21,16 @@ permalink: /jobs
       <p>At StoneAge, each department views not only those who buy our products as customers, but each employee as a customer. We expect our employees to address issues in a timely manner, communicate effectively with both customers and each other, and look for positive ways to solve problems. StoneAge fosters a self-motivated environment where managing multiple priorities is essential.</p>
       </div>
       <div class="col-sm-6 padding-tb-30">
-        <div class="col-sm-6 col-sm-offset-1">
-          <a href="https://www.outsideonline.com/2134736/best-places-work-2016" target="_blank"><img src="assets/img/logo_BestPlacestoWork_2016.png" class="img-responsive" alt="Outside Magazine's Best Places to work"></a>
-        </div>
-        <div class="col-sm-4 col-sm-offset-1">
-          <a href="http://www.iamfromdurango.com/" target=_blank><img src="assets/img/logo_durango_lpc.jpg" class="img-responsive" alt="La Plata County Economic Development Alliance"></a>
-        </div>
+        <table>
+          <tr>
+            <td style="width:60%; padding: 0 20px;"><a href="https://www.outsideonline.com/2134736/best-places-work-2016" target="_blank"><img src="assets/img/logo_BestPlacestoWork_2016.png" class="img-responsive" alt="Outside Magazine's Best Places to work"></a></td>
+            <td style="width:40%; padding: 20px;"><a href="http://www.iamfromdurango.com/" target=_blank><img src="assets/img/logo_durango_lpc.jpg" class="img-responsive" alt="La Plata County Economic Development Alliance"></a></td>
+          </tr>
+          <tr>
+            <td style="width:65%; padding: 10px 20px;"><a href="http://www.esopassociation.org/" target=_blank><img src="assets/img/logo_ESOP.png" class="img-responsive" alt="ESOP Association"></a></td>
+            <td style="width:35%; padding: 20px;"><a href="https://www.certifiedeo.com/" target=_blank><img src="assets/img/logo-certifiedeo-brand.png" class="img-responsive"  alt="Certified EO"></a></td>
+          </tr>
+        </table>
       </div>
     </div>
 
@@ -48,7 +52,6 @@ permalink: /jobs
         <p>Click the job description link and use the "Apply for this job" button to submit your application.</p>
         <p>Please include a cover letter and resume specific to each position you’re applying for.</p>
         <p class="small"><em>Please note:</em><br>If you are not currently living in the region, your cover letter should include information about your interest in the Durango area. We send acknowledgement by email of all resumes we receive. If we do not contact you for an interview within one to two weeks, we have selected other candidates for the initial interview process. However, we keep all resumes on file until the position is filled, in case we decide to broaden our search.<br><em>Thank you.</em></p>
-        <a href="http://www.esopassociation.org/" target=_blank><img src="assets/img/logo_ESOP_nowords.png" class="img-responsive" style="display: inline;" alt="ESOP Association"></a> <a href="https://www.certifiedeo.com/" target=_blank><img src="assets/img/logo-certifiedeo-brand.png" class="img-responsive" style="width: 50%; display: inline; padding-left: 30px;" alt="Certified EO"></a>
       </div>
     </div>
   </div>
